fix:(profile button hidden by Window controls)
fix- moved profile icon/button to the left to make it easy to click without getting disturbed by window controls on windows os

--- a/user.css
+++ b/user.css
@@ -21,6 +21,12 @@
   -webkit-mask-size: contain;
 }
 
+/* fix window controls, hides profile*/
+.main-userWidget-box {
+  bottom: 5px;
+  right: 150px;
+}
+
 /* Fix Overflow off Screen */
 html {
   max-width: 100vw;
